--- a/index.html
+++ b/index.html
@@ -17,23 +17,59 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PV6D69ZP');</script>
 <!-- End Google Tag Manager -->
-    <title>Home Centre - Home</title>
-    <style>
-        body { margin: 0; font-family: Arial; }
-        nav { background: #333; padding: 15px; display: flex; justify-content: space-between; align-items: center; }
-        nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; }
-        nav .right a { background: #ff7a00; padding: 8px 15px; border-radius: 5px; }
-        header { height: 90vh; background: url('https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat; display: flex; justify-content: center; align-items: center; color:white; text-shadow: 2px 2px 10px #000; flex-direction: column; }
-        .form-box { background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; width: 300px; }
-        input { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: none; }
-        .btn { background: #ff7a00; color: #fff; text-decoration: none; display: block; text-align:center; padding: 10px; border-radius: 5px; }
-    </style>
+<title>Home Centre - Home</title>
+<style>
+body { margin: 0; font-family: Arial; }
+
+/* NAVBAR */
+nav { background: #333; padding: 15px; display: flex; justify-content: space-between; align-items: center; }
+nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; }
+nav .right a { background: #ff7a00; padding: 8px 15px; border-radius: 5px; }
+
+/* HEADER */
+header {
+    height: 90vh;
+    background: url('https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    text-shadow: 2px 2px 10px #000;
+    flex-direction: column;
+    text-align: center;
+}
+
+/* BUTTON STYLES */
+.btn, .btn-explore {
+    background: #ff7a00;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    text-align:center;
+    padding: 12px 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+    font-size: 16px;
+}
+.btn-explore:hover { opacity: 0.9; }
+
+/* SIGNUP BOX */
+.form-box {
+    background: rgba(0,0,0,0.6);
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+}
+input { width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: none; }
+
+</style>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PV6D69ZP"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<!-- NAVIGATION -->
 <nav>
     <div class="left">
         <a href="index.html">Home</a>
@@ -46,49 +82,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </nav>
 
+<!-- HEADER -->
 <header>
-    <h1>Welcome to Home Centre</h1>
-    <p>Your one-stop shop for premium home furniture</p>
 
-    <div class="form-box">
-        <h3>Sign Up</h3>
-        <input type="text" placeholder="Full Name" required>
-        <input type="email" placeholder="Email" required>
-        <a class="btn" href="thankyou.html">Sign Up</a>
-    </div>
+<h1>Welcome to Home Centre</h1>
+<p>Your one-stop shop for premium home furniture</p>
+
+<!-- SIGNUP FORM -->
+<div class="form-box">
+    <h3>Sign Up</h3>
+    <input type="text" placeholder="Full Name" required>
+    <input type="email" placeholder="Email" required>
+    <a class="btn" href="thankyou.html">Sign Up</a>
+</div>
+
+<!-- ⭐ EXPLORE NOW BUTTON BELOW SIGNUP BOX -->
+<a class="btn-explore" href="https://bindugowdaaa.github.io/ecommerce-website/index.html" target="_blank">
+    Explore Now
+</a>
+
 </header>
-
-
-
-<!-- Featured Products Section -->
-<section style="padding:40px; text-align:center; background:#f8f8f8;">
-<h2 style="margin-bottom:30px; font-size:28px;">Featured Home Centre Items</h2>
-
-<div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px;">
-
-<div style="width:300px; background:white; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.2); overflow:hidden;">
-<img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?auto=format&fit=crop&w=600&q=80" style="width:100%; height:200px; object-fit:cover;">
-<h3 style="padding:10px;">Luxury Sofa</h3>
-<p style="padding:0 10px; color:#444;">Premium comfort sofa for modern homes.</p>
-<a href="products.html" class="btn" style="margin:15px; display:block;">Shop Now</a>
-</div>
-
-<div style="width:300px; background:white; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.2); overflow:hidden;">
-<img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=600&q=80" style="width:100%; height:200px; object-fit:cover;">
-<h3 style="padding:10px;">Wooden Dining Table</h3>
-<p style="padding:0 10px; color:#444;">Strong and elegant dining table set.</p>
-<a href="products.html" class="btn" style="margin:15px; display:block;">Shop Now</a>
-</div>
-
-<div style="width:300px; background:white; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.2); overflow:hidden;">
-<img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=600&q=80" style="width:100%; height:200px; object-fit:cover;">
-<h3 style="padding:10px;">Office Chair</h3>
-<p style="padding:0 10px; color:#444;">Ergonomic chair for work comfort.</p>
-<a href="products.html" class="btn" style="margin:15px; display:block;">Shop Now</a>
-</div>
-
-</div>
-</section>
 
 </body>
 </html>
