--- a/about.html
+++ b/about.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NT4664RS');</script>
+<!-- End Google Tag Manager -->
 <title>Home Centre - About</title>
 <style>
 body { margin: 0; font-family: Arial; }
@@ -29,7 +35,10 @@ img {
 </head>
 
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NT4664RS"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <nav>
 <div class="left">
 <a href="index.html">Home</a>
